--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,24 @@ li {
   height: 10vh;
 }
 
+ul {
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  text-align: right;
+  width: 10em;
+}
+
+input {
+  position: relative;
+}
+
+.task-placeholder {
+  align-items: center;
+  justify-content: space-between;
+}
+
 .input-task {
   border-top-color: black;
   border-top-width: 1px;
